--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ android
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+package-lock.json
+yarn.lock
+package-lock.json
